--- a/bibl.bib
+++ b/bibl.bib
@@ -422,6 +422,18 @@ published papers
 	doi			= "10.1007/s00199-006-0080-z",
 }
 
+@article{BrzustowskiGeorgiadisharrisSzentes2023,
+	author		= "Thomas Brzustowski and Alkis Georgiadis-Harris and Balázs Szentes",
+	year		= "2023",
+	title		= "Smart contracts and the {C}oase conjecture",
+	journaltitle= aer,
+	volume		= "113",
+	number		= "5",
+	pages		= "1334--59",
+	langid		= "american",
+	doi			= "10.1257/aer.20220357",
+}
+
 @article{BullWatson2004,
 	author		= "Jesse Bull and Joel Watson",
 	year		= "2004",
@@ -1580,6 +1592,19 @@ published papers
 	doi			= "10.1257/aer.20140494",
 }
 
+@article{NavaSchiraldi2019,
+	author		= "Francesco Nava and Pasquale Schiraldi",
+	year		= "2019",
+	title		= "Differentiated durable goods monopoly",
+	subtitle	= "A robust {C}oase conjecture",
+	journaltitle= aer,
+	volume		= "109",
+	number		= "5",
+	pages		= "1930--68",
+	langid		= "american",
+	doi			= "10.1257/aer.20160404",
+}
+
 @article{Neeman2004,
 	author		= "Zvika Neeman",
 	year		= "2004",
@@ -2016,11 +2041,29 @@ working papers
 	langid		= "american",
 }
 
+@unpublished{HauserHopenhayn2010,
+	author		= "Christine Hauser and Hugo Hopenhayn",
+	year		= "2010",
+	title		= "Trading favors",
+	subtitle	= "Optimal exchange and forgiveness",
+	note		= "working paper, Aug 2010",
+	langid		= "american",
+}
+
 @unpublished{HaghpanahKuvalekarLipnowski2022,
 	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
 	year		= "2023",
 	title		= "Buying from a group",
 	note		= "working paper, 8 June 2023",
+	langid		= "american",
+}
+
+@thesis{Holmstrom1977,
+	author		= "Bengt Holmström",
+	year		= "1977",
+	title		= "On incentives and control in organizations",
+	type		= "doctoral thesis",
+	institution	= "Stanford University",
 	langid		= "american",
 }
 
@@ -2037,24 +2080,6 @@ working papers
 	year		= "2023",
 	title		= "The first-price principle of maximizing economic objectives",
 	note		= "working paper, Aug 2023",
-	langid		= "american",
-}
-
-@unpublished{HauserHopenhayn2010,
-	author		= "Christine Hauser and Hugo Hopenhayn",
-	year		= "2010",
-	title		= "Trading favors",
-	subtitle	= "Optimal exchange and forgiveness",
-	note		= "working paper, Aug 2010",
-	langid		= "american",
-}
-
-@thesis{Holmstrom1977,
-	author		= "Bengt Holmström",
-	year		= "1977",
-	title		= "On incentives and control in organizations",
-	type		= "doctoral thesis",
-	institution	= "Stanford University",
 	langid		= "american",
 }
 
@@ -2081,6 +2106,15 @@ working papers
 	title		= "Rent extraction with information acquisition",
 	note		= "working paper, 7 Sep 2023",
 	langid		= "american",
+}
+
+@unpublished{LomysYamashita2022,
+	author		= "Niccolò Lomys and Takuro Yamashita",
+	year		= "2022",
+	title		= "A mediator approach to mechanism design with limited commitment",
+	note		= "working paper, 15 Aug 2022",
+	langid		= "american",
+	doi			= "10.2139/ssrn.4116543",
 }
 
 @unpublished{Liu2015,
