--- a/ch1.tex
+++ b/ch1.tex
@@ -688,7 +688,7 @@ at a price $p^\Delta$ that approaches $\inf S$ as $\Delta \to 0$.
 The classical intuition for this conjecture is that when the period length $\Delta$ is small, the monopolist in period $n$ engages in near-perfect competition with her period-$(n+1)$ self.
 
 This intuition is incomplete, it seems to me, at least when $\inf S > 0$, because `perfect competition' surely means selling at marginal cost (which we've normalised to zero), rather than at price $\inf S$!
-Here's a better intuition from Francesco Nava (who has several papers on this topic): the seller's lack of commitment constrains her eventually to sell the good whatever the buyer's value, and constrains her no further than that; thus she sells the good at the highest market-clearing price, which is $\inf S$.
+Here's a better intuition that I learned from Francesco Nava: the seller's lack of commitment constrains her eventually to sell the good whatever the buyer's value, and constrains her no further than that; thus she sells the good at the highest market-clearing price, which is $\inf S$.
 
 Is the conjecture true?
 If we restrict attention to stationary equilibria,
@@ -708,7 +708,8 @@ which support trade at any price between zero and the full-commitment monopoly p
 The conjecture is from \textcite{Coase1972}.
 The big papers are \textcite{FudenbergLevineTirole1985,GulSonnenscheinWilson1986,AusubelDeneckere1989};
 see \textcite{AusubelCramtonDeneckere2002} for a survey.
-For a taste of recent work on this topic, consider \textcite{DovalSkreta2021}.
+For the intuition I attributed to Francesco Nava, see \textcite{NavaSchiraldi2019} and the references therein.
+For a taste of recent work on this topic, consider \textcite{DovalSkreta2021,BrzustowskiGeorgiadisharrisSzentes2023,LomysYamashita2022}.
 
 
 
