--- a/bibl.bib
+++ b/bibl.bib
@@ -652,6 +652,18 @@ published papers
 	doi			= "10.1093/restud/rdy073",
 }
 
+@article{DovalSkreta2021,
+	author		= "Laura Doval and Vasiliki Skreta",
+	year		= "2024",
+	title		= "Optimal mechanism for the sale of a durable good",
+	journaltitle= te,
+	volume		= "19",
+	number		= "2",
+	pages		= "865--915",
+	langid		= "american",
+	doi			= "10.3982/TE4485",
+}
+
 @article{DworczakKominersAkbarpour2021,
 	author		= "Piotr Dworczak and Scott Duke Kominers and Mohammad Akbarpour",
 	year		= "2021",
@@ -1677,6 +1689,18 @@ published papers
 	doi			= "10.3982/TE2771",
 }
 
+@article{OnuchicRay2022iron,
+	author		= "Paula Onuchic and Debraj Ray",
+	year		= "2023",
+	title		= "Conveying value via categories",
+	journaltitle= te,
+	volume		= "18",
+	number		= "4",
+	pages		= "1407--1439",
+	langid		= "american",
+	doi			= "10.3982/TE5026",
+}
+
 @article{PaiVohra2013,
 	author		= "Mallesh M. Pai and Rakesh Vohra",
 	year		= "2013",
@@ -1950,19 +1974,19 @@ working papers
 
 @unpublished{sfb,
 	author		= "Gregorio Curello and Ludvig Sinander",
-	year		= "2023",
+	year		= "2024",
 	title		= "Screening for breakthroughs",
-	note		= "working paper, 12 Jun 2023",
+	note		= "working paper, 21 Feb 2024",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2011.10090",
 }
 
 @unpublished{BallKattwinkel2023,
 	author		= "Ian Ball and Deniz Kattwinkel",
-	year		= "2023",
+	year		= "2024",
 	title		= "Linking mechanisms",
 	subtitle	= "Limits and robustness",
-	note		= "working paper, 14 Sep 2023",
+	note		= "working paper, 23 Apr 2024",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2309.07363",
 }
@@ -1981,15 +2005,6 @@ working papers
 	title		= "Incentives for collective innovation",
 	note		= "working paper, 12 May 2021",
 	langid		= "american",
-}
-
-@unpublished{DovalSkreta2021,
-	author		= "Laura Doval and Vasiliki Skreta",
-	year		= "2021",
-	title		= "Optimal mechanism for the sale of a durable good",
-	note		= "working paper, 28 May 2021",
-	langid		= "american",
-	doi			= "10.48550/arXiv.1904.07456",
 }
 
 @unpublished{ErlansonKleiner2022,
@@ -2052,9 +2067,9 @@ working papers
 
 @unpublished{HaghpanahKuvalekarLipnowski2022,
 	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
-	year		= "2023",
+	year		= "2024",
 	title		= "Buying from a group",
-	note		= "working paper, 8 June 2023",
+	note		= "working paper, 27 Mar 2024",
 	langid		= "american",
 }
 
@@ -2146,14 +2161,6 @@ working papers
 	year		= "2001",
 	title		= "Trading favors",
 	note		= "working paper, May 2001",
-	langid		= "american",
-}
-
-@unpublished{OnuchicRay2022iron,
-	author		= "Paula Onuchic and Debraj Ray",
-	year		= "2022",
-	title		= "Conveying value via categories",
-	note		= "working paper, Dec 2022",
 	langid		= "american",
 }
 
