--- a/ch3.tex
+++ b/ch3.tex
@@ -101,7 +101,7 @@ where $K \in [0,1]$ is a constant.
 We could call this a \emph{discounted quota:}
 it caps the discounted total quantity that the agent may consume.
 
-We could just as well replace this lifetime budget constraint with a dynamic budget constraint: the agent starts out with $M_0 \coloneqq (1-\delta) \delta^{-1} K$ `tokens',
+We could just as well replace this lifetime budget constraint with a dynamic budget constraint: the agent starts out with $M_0 \coloneqq \delta (1-\delta)^{-1} K$ `tokens',
 which may be spent to obtain the good and which accrue interest at rate $\delta^{-1}-1$ if saved:
 %
 \begin{equation*}
