--- a/ms.tex
+++ b/ms.tex
@@ -16,7 +16,7 @@
 %                                   _     _
 %    _ __  _ __ ___  __ _ _ __ ___ | |__ | | ___
 %   | '_ \| '__/ _ \/ _` | '_ ` _ \| '_ \| |/ _ \
-%   | |_) | | |  __/ (_| | | | | | | |_) | |  __/
+%   | |_) | | |  __/ (_| | |  | | | | |_) | |  __/
 %   | .__/|_|  \___|\__,_|_| |_| |_|_.__/|_|\___|
 %   |_|
 
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 22 January 2024}
+\date{\small This version: 16 May 2024}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -124,7 +124,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 
 These are the notes for a second-year graduate course that I taught at Oxford in the autumns of 2021, 2022 and 2023.
 Thanks to Gregorio Curello, Péter Es\H{o}, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
-and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Justin Hadad, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
+and to Ufuk Altunbüken, Catharina Behrens, Josh le Cornu, Tanxin Gao, Justin Hadad, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
 
 
 
