--- a/bibl.bib
+++ b/bibl.bib
@@ -1,4 +1,4 @@
-Copyright (c) 2023 Carl Martin Ludvig Sinander.
+Copyright (c) 2024 Carl Martin Ludvig Sinander.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -771,6 +771,18 @@ published papers
 	doi			= "10.1093/restud/rds048",
 }
 
+@article{FengEtal2021,
+	author		= "Felix Zhiyu Feng and Curtis R. Taylor and Mark M. Westerfield and Feifan Zhang",
+	year		= "2024",
+	title		= "Setbacks, shutdowns, and overruns",
+	journaltitle= ecta,
+	volume		= "92",
+	number		= "3",
+	pages		= "815--847",
+	langid		= "american",
+	doi			= "10.3982/ECTA21548",
+}
+
 @article{FernandesPhelan2000,
 	author		= "Ana Fernandes and Christopher Phelan",
 	year		= "2000",
@@ -1086,6 +1098,18 @@ published papers
 	pages		= "1093--1131",
 	langid		= "american",
 	doi			= "10.3982/ECTA11070",
+}
+
+@article{HaghpanahKuvalekarLipnowski2022,
+	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
+	year		= "2024",
+	title		= "Buying from a group",
+	journaltitle= aer,
+	volume		= "114",
+	number		= "8",
+	pages		= "2596--2632",
+	langid		= "american",
+	doi			= "10.1257/aer.20230914",
 }
 
 @article{Hammond1979,
@@ -2003,8 +2027,9 @@ working papers
 	author		= "Gregorio Curello",
 	year		= "2021",
 	title		= "Incentives for collective innovation",
-	note		= "working paper, 12 May 2021",
+	note		= "working paper, 4 May 2023",
 	langid		= "american",
+	doi			= "10.48550/arXiv.2109.01885",
 }
 
 @unpublished{ErlansonKleiner2022,
@@ -2023,28 +2048,11 @@ working papers
 	langid		= "american",
 }
 
-@unpublished{FengEtal2021,
-	author		= "Felix Zhiyu Feng and Curtis R. Taylor and Mark M. Westerfield and Feifan Zhang",
-	year		= "2021",
-	title		= "Setbacks, shutdowns, and overruns",
-	note		= "working paper, Jan 2021",
-	doi			= "10.2139/ssrn.3775340",
-	langid		= "american",
-}
-
 @unpublished{Garfagnini2011,
 	author		= "Umberto Garfagnini",
 	year		= "2011",
 	title		= "Delegated experimentation",
 	note		= "working paper, 18 Mar 2011",
-	langid		= "american",
-}
-
-@unpublished{GolosovIovino2019,
-	author		= "Mikhail Golosov and Luigi Iovino",
-	year		= "2019",
-	title		= "Social insurance, information revelation, and lack of commitment",
-	note		= "working paper, Oct 2019",
 	langid		= "american",
 }
 
@@ -2062,14 +2070,6 @@ working papers
 	title		= "Trading favors",
 	subtitle	= "Optimal exchange and forgiveness",
 	note		= "working paper, Aug 2010",
-	langid		= "american",
-}
-
-@unpublished{HaghpanahKuvalekarLipnowski2022,
-	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
-	year		= "2024",
-	title		= "Buying from a group",
-	note		= "working paper, 27 Mar 2024",
 	langid		= "american",
 }
 
@@ -2094,14 +2094,15 @@ working papers
 	author		= "Byeong-hyeon Jeong and Marek Pycia",
 	year		= "2023",
 	title		= "The first-price principle of maximizing economic objectives",
-	note		= "working paper, Aug 2023",
+	note		= "working paper, Nov 2023",
 	langid		= "american",
 }
 
 @unpublished{JewittQuigleyInprogress,
 	author		= "Ian Jewitt and Daniel Quigley",
-	year		= "in progress",
+	year		= "2023",
 	title		= "Conjugate persuasion",
+	note		= "working paper, Aug 2023",
 	langid		= "american",
 }
 
@@ -2145,48 +2146,6 @@ working papers
 	year		= "2003",
 	title		= "Could politicians be more right than economists? A theory of merger standards",
 	note		= "working paper, Nov 2003",
-	langid		= "american",
-}
-
-@unpublished{Madsen2020,
-	author		= "Erik Madsen",
-	year		= "2020",
-	title		= "Designing deadlines",
-	note		= "working paper, 13 Feb 2020",
-	langid		= "american",
-}
-
-@unpublished{Mobius2001,
-	author		= "Markus M. Möbius",
-	year		= "2001",
-	title		= "Trading favors",
-	note		= "working paper, May 2001",
-	langid		= "american",
-}
-
-@unpublished{Price2019,
-	author		= "Brendan M. Price",
-	year		= "2019",
-	title		= "The duration and wage effects of long-term unemployment benefits",
-	subtitle	= "Evidence from {G}ermany's {H}artz {IV} reform",
-	note		= "working paper, 26 Dec 2019",
-	langid		= "american",
-}
-
-@unpublished{Rappoport2020,
-	author		= "Daniel Rappoport",
-	year		= "2020",
-	title		= "Evidence and skepticism in verifiable disclosure games",
-	note		= "working paper, Mar 2020",
-	langid		= "american",
-	doi			= "10.2139/ssrn.2978288",
-}
-
-@unpublished{Roberts1983,
-	author		= "Kevin Roberts",
-	year		= "1983",
-	title		= "Long term contracts",
-	note		= "working paper, {U}niversity of {W}arwick",
 	langid		= "american",
 }
 
