--- a/ms.tex
+++ b/ms.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2023 Carl Martin Ludvig Sinander.
+% Copyright (c) 2024 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 16 May 2024}
+\date{\small This version: 4 September 2024}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -99,7 +99,7 @@ University of Oxford}
 \pagebreak
 \hspace{1pt}\vfill
 \noindent
-Copyright \copyright{} 2023 Carl Martin Ludvig Sinander.
+Copyright \copyright{} 2024 Carl Martin Ludvig Sinander.
 
 \begin{quotation}
 \noindent
@@ -122,7 +122,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%
 
-These are the notes for a second-year graduate course that I taught at Oxford in the autumns of 2021, 2022 and 2023.
+These are the notes for a second-year graduate course that I have been teaching at Oxford each autumn since 2021.
 Thanks to Gregorio Curello, Péter Es\H{o}, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
 and to Ufuk Altunbüken, Catharina Behrens, Josh le Cornu, Tanxin Gao, Justin Hadad, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
 
