--- a/bibl.bib
+++ b/bibl.bib
@@ -1967,6 +1967,18 @@ published papers
 	doi			= "10.1016/0165-4101(83)90011-3",
 }
 
+@article{Vickrey1961,
+	author		= "William Vickrey",
+	year		= "1961",
+	title		= "Counterspeculation, auctions, and competitive sealed tenders",
+	journaltitle= "Journal of Finance",
+	volume		= "16",
+	number		= "1",
+	pages		= "8--37",
+	langid		= "american",
+	doi			= "10.1111/j.1540-6261.1961.tb02789.x",
+}
+
 @article{Williams2011,
 	author		= "Noah Williams",
 	year		= "2011",
@@ -2021,6 +2033,15 @@ working papers
 	title		= "Sequential mechanisms for evidence acquisition",
 	note		= "working paper, Jun 2023",
 	langid		= "american",
+}
+
+@unpublished{BorgersCheng2023,
+	author		= "Xienan Cheng and Tilman Börgers",
+	year		= "2023",
+	title		= "Dominance and optimality",
+	note		= "working paper, Apr 2023",
+	langid		= "american",
+	doi			= "10.2139/ssrn.4422054",
 }
 
 @unpublished{Curello2021,
@@ -2153,6 +2174,19 @@ working papers
 --------
 chapters
 
+@incollection{AusubelCramtonDeneckere2002,
+	author			= "Lawrence M. Ausubel and Peter Cramton and Raymond J. Deneckere",
+	year			= "2002",
+	title			= "Bargaining with incomplete information",
+	booktitle		= "Handbook of Game Theory with Economic Applications",
+	volume			= "3",
+	editor			= "Robert Aumann and Sergiu Hart",
+	pages			= "1897--1945",
+	publisher		= "North-Holland",
+	address			= "Amsterdam",
+	langid			= "american",
+}
+
 @incollection{Fridolfsson2007,
 	author			= "Sven-Olof Fridolfsson",
 	year			= "2007",
@@ -2163,6 +2197,31 @@ chapters
 	pages			= "287--302",
 	publisher		= "Emerald",
 	address			= "Bingley",
+	langid			= "american",
+}
+
+@incollection{FudenbergLevineTirole1985,
+	author			= "Drew Fudenberg and David Levine and Jean Tirole",
+	year			= "1985",
+	title			= "Infinite-horizon models of bargaining with one-sided incomplete information",
+	booktitle		= "Game-Theoretic Models of Bargaining",
+	editor			= "Alvin E. Roth",
+	pages			= "73--98",
+	publisher		= cup,
+	address			= "Cambridge",
+	langid			= "american",
+}
+
+@incollection{Green1987,
+	author			= "Edward J. Green",
+	year			= "1987",
+	title			= "Lending and the smoothing of uninsurable income",
+	booktitle		= "Contractual Arrangements for Intertemporal Trade",
+	editor			= "E. C. Prescott and N. Wallace",
+	series			= "Minnesota Studies in Macroeconomics",
+	pages			= "3--25",
+	publisher		= "University of Minnesota Press",
+	address			= "Minneapolis, MN",
 	langid			= "american",
 }
 
@@ -2191,19 +2250,6 @@ books
 	publisher	= "Springer",
 	address		= "Berlin",
 	langid		= "american",
-}
-
-@incollection{AusubelCramtonDeneckere2002,
-	author			= "Lawrence M. Ausubel and Peter Cramton and Raymond J. Deneckere",
-	year			= "2002",
-	title			= "Bargaining with incomplete information",
-	booktitle		= "Handbook of Game Theory with Economic Applications",
-	volume			= "3",
-	editor			= "Robert Aumann and Sergiu Hart",
-	pages			= "1897--1945",
-	publisher		= "North-Holland",
-	address			= "Amsterdam",
-	langid			= "american",
 }
 
 @book{Billingsley1995,
@@ -2238,18 +2284,6 @@ books
 	langid		= "american",
 }
 
-@incollection{FudenbergLevineTirole1985,
-	author			= "Drew Fudenberg and David Levine and Jean Tirole",
-	year			= "1985",
-	title			= "Infinite-horizon models of bargaining with one-sided incomplete information",
-	booktitle		= "Game-Theoretic Models of Bargaining",
-	editor			= "Alvin E. Roth",
-	pages			= "73--98",
-	publisher		= cup,
-	address			= "Cambridge",
-	langid			= "american",
-}
-
 @book{Galichon2016,
 	author		= "Alfred Galichon",
 	year		= "2016",
@@ -2257,19 +2291,6 @@ books
 	publisher	= pup,
 	address		= "Princeton, NJ",
 	langid		= "american",
-}
-
-@incollection{Green1987,
-	author			= "Edward J. Green",
-	year			= "1987",
-	title			= "Lending and the smoothing of uninsurable income",
-	booktitle		= "Contractual Arrangements for Intertemporal Trade",
-	editor			= "E. C. Prescott and N. Wallace",
-	series			= "Minnesota Studies in Macroeconomics",
-	pages			= "3--25",
-	publisher		= "University of Minnesota Press",
-	address			= "Minneapolis, MN",
-	langid			= "american",
 }
 
 @book{Guesnerie1995,
@@ -2289,6 +2310,14 @@ books
 	publisher	= "Springer",
 	address		= "New York, NY",
 	langid		= "american",
+}
+
+@book{Hartline2016,
+	author		= "Jason D. Hartline",
+	year		= "2016",
+	title		= "Mechanism design and approximation",
+	langid		= "american",
+	url			= "http://jasonhartline.com/MDnA",
 }
 
 @book{LaffontMartimort2002,
