--- a/ch3.tex
+++ b/ch3.tex
@@ -85,7 +85,7 @@ In §\ref{sec:ch3:guohorner}--§\ref{sec:ch3:nocommitment}, we shall instead ass
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Assume that the agent learns the realisation of her entire type sequence $(T_n)_{n=0}^\infty$ at the outset.%
-	\footnote{My own intuition suggests that this assumption shouldn't matter much, but I may be wrong. There is no definitive answer in the literature, to my knowledge.}
+	\footnote{My own intuition suggests that this assumption shouldn't matter \emph{too} much, but I may be wrong. There is no definitive answer in the literature, to my knowledge.}
 
 Here's a mechanism:
 the agent freely chooses
@@ -382,7 +382,7 @@ The agent's entitlement will eventually hit either $0$ or $\infty$.%
 	\footnote{In finite time, almost surely; this follows from the Borel--Cantelli lemma.}
 We might call the former `termination'
 and the latter `tenure'.
-The discounted total quantity supplied is evidently not constant (by contrast with discounted-quota mechanisms).
+The discounted total quantity supplied is evidently not deterministic (by contrast with discounted-quota mechanisms).
 
 
 \paragraph{The literature.}
@@ -433,7 +433,7 @@ This gives the principal the ability to commit not to allocate (within a given p
 The first thing to check is whether relaxing commitment matters:
 if the entitlement mechanism that was optimal under full commitment is an equilibrium outcome, then we'd be done!
 But it's not an equilibrium outcome.
-To see why, consider a history at which the agent's entitlement $E$ has hit $\infty$. (This occurs with positive probability.)
+To see why, consider a history at which the agent's entitlement $E$ has hit $\infty$. (This occurs with positive probability in finite time.)
 The agent is now permitted to consume the good in every subsequent period, despite the fact that the principal prefers \emph{not} to allocate absent screening ($\mu < c$).
 Clearly the principal strictly prefers to deviate to never allocate again.
 
