--- a/preamble.tex
+++ b/preamble.tex
@@ -156,6 +156,7 @@
 % \usepackage{etoolbox}
 % \AtBeginEnvironment{tikzpicture}{\shorthandoff{;}}
 	% make TikZ compatible with babel French (ffs)
+\counterwithout{figure}{chapter}
 
 
 %%% nice appendices
